# Changelog 

## [v2026+1.0.0-beta.5] - December 22, 2025

## Fixed
- Projects > Portfolio release date

--------------------------

## [v2026+1.0.0-beta.4] - December 22, 2025

## Removed
- PaperMC Hangar
- Two primary buttons

--------------------------

## [v2026+1.0.0-beta.3] - December 20, 2025

### Fixed
- Grammar

## Changed
- Loading time
- Timeline

## Removed
- Future

--------------------------

## [v2026+1.0.0-beta.2] - December 19, 2025

### Removed
- Every .txt note in notes (only changelog stays)
- Updated versions

--------------------------

## [v2026+1.0.0-beta.1] - December 15, 2025

### Added
- Responsive

--------------------------

## [v2026+1.0.0-beta] - December 14, 2025

### Added
- "Future" section

### Changed
- General "wejkey.org" redesign

--------------------------

## [3.1.5] - December 3, 2025

### Added
- More "contact" icons

### Changed
- Merged Database & Plugins into one project on homepage
- Database to general base for my projects, not just Minecraft plugins

### Removed
- Project "Plugins"

--------------------------

## [3.1.4] - November 23, 2025

### Added
- Database

--------------------------

## [3.1.3] - November 21, 2025

### Changed
- "MC plugins" > "Plugins"
- Changed description for project "Plugins"
- Discord contact

--------------------------

## [3.1.2] - November 20, 2025

### Changed
- Contact icon "redirect" > "copy"

--------------------------

## [3.1.1] - November 20, 2025

### Added
- New project

### Changed
- "Plugins" Archived > Active

--------------------------

## [3.1] - November 19, 2025

### Added
- Notes

### Changed
- Main theme to "Winter"